:sparkles: [ADD] userId validation
